jEdit 4.4 version history
       (changes since jEdit 4.3)
:encoding=UTF-8:

{{{ Version 4.4.2

Thanks to Björn "Vampire" Kautler and Matthieu Casanova for contributing to this release.

{{{ Bug Fixes
- Untitled buffer should not be created on VFS without write capability
  (#3399387) (Matthieu Casanova)

- Pressing left arrow when the caret is at the buffer start but in a selection
  now cancels the selection as it should. (#3396672) (Matthieu Casanova)

- Fixed loading of jEdit in case of corrupted recent.xml file in the settings
  (#3396545) (Matthieu Casanova)

- If the current buffer is on a VFS that is not browseable (ex:http), trying
  to open a new file was trying to browse the path of the current file giving
  an error (Matthieu Casanova)

- Error Widget now use the same color as Invalid token instead of being always
  red (Matthieu Casanova)
}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}
}}}
{{{ Version 4.4.1

Thanks to Björn "Vampire" Kautler, Kazutoshi Satoda, Alan Ezust,
and Matthieu Casanova for contributing to this release.

{{{ Bug Fixes

- Collapsing all folds will move the caret outside any fold if necessary
  (Matthieu Casanova)

- Fixed an exception that occurs when opening jEdit from command line
  with some files to open as argument if a jEdit server is running
  (#3173669 - Matthieu Casanova)

- jEdit now force drops from external applications to be COPY and not
  MOVE drops. It prevents ftp explorer from deleting dropped files
  (#1208598 - Matthieu Casanova)
  
- Changing bufferset scopes now saved to properties as default scope.
  (#3316329 - Matthieu Casanova)
  
- Buffersets no longer populated with open files when creating new view. 
  (#2990965 - Matthieu Casanova and Alan Ezust)  

- BufferSet contents of new Plain View #3317405 fixed (Matthieu Casanova)

- When the cursor was at a start (or end) of non-top (non-bottom) line,
  Find Next (Previous) for a non-empty regex starting with "^" (ending