@@ -731,6 +731,8 @@ public abstract class TextArea extends JComponent
 	 */
 	public void scrollTo(int line, int offset, boolean doElectricScroll)
 	{
+		if (buffer.isLoading())
+			return;
 		if(Debug.SCROLL_TO_DEBUG)
 			Log.log(Log.DEBUG,this,"scrollTo(), lineCount="
 				+ getLineCount());
@@ -2544,6 +2546,8 @@ loop:		for(int i = lineNo + 1; i < getLineCount(); i++)
 	 */
 	public void goToNextWord(boolean select, boolean eatWhitespace)
 	{
+		if (buffer.isLoading())
+			return;
 		int lineStart = getLineStartOffset(caretLine);
 		int newCaret = caret - lineStart;
 		String lineText = getLineText(caretLine);
@@ -2850,6 +2854,8 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 	 */
 	public void goToPrevWord(boolean select, boolean eatWhitespace, boolean eatOnlyAfterWord)
 	{
+		if (buffer.isLoading())
+			return;
 		int lineStart = getLineStartOffset(caretLine);
 		int newCaret = caret - lineStart;
 		String lineText = getLineText(caretLine);
@@ -3083,6 +3089,8 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 	 */
 	public void goToStartOfWhiteSpace(boolean select)
 	{
+		if (buffer.isLoading())
+			return;
 		Selection s = getSelectionAtOffset(caret);
 		int line, offset;
 		if(select || s == null)
@@ -3121,6 +3129,8 @@ loop:		for(int i = lineNo - 1; i >= 0; i--)
 	 */
 	public void goToEndOfWhiteSpace(boolean select)
 	{
+		if (buffer.isLoading())
+			return;
 		Selection s = getSelectionAtOffset(caret);
 		int line, offset;
 		if(select || s == null)
